--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@ table {
 
 body {
   background-color: #0A1D1E;
+  overflow-x: hidden;
 }
 
 .row-limit-size {
@@ -65,11 +66,11 @@ header {
 
 header .burger {
   width: 100%;
-  height: 100px;
   position: fixed;
   background: transparent;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
+  z-index: 999;
 }
 
 header .burger #barres {
@@ -84,24 +85,32 @@ header #menu {
   height: 90vh;
   width: 100%;
   visibility: hidden;
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
   position: fixed;
-  top: 15%;
+  top: 0;
   left: 0;
   right: 0;
-  z-index: 99;
+  z-index: 100;
 }
 
 header #menu ul {
   background-color: #132e30;
   width: 100%;
+  max-width: 50%;
   padding-bottom: 50px;
+  float: right;
   text-align: center;
+  z-index: 9999;
+  height: 100vh;
+  padding-top: 200px;
 }
 
 header #menu li {
   padding-top: 50px;
+}
+
+header #menu li:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 header #menu a {
@@ -109,7 +118,7 @@ header #menu a {
   display: block;
   text-decoration: none;
   color: white;
-  font-size: 4rem;
+  font-size: 2.7rem;
   font-family: 'MuseoModerno';
   text-transform: uppercase;
 }
@@ -120,12 +129,49 @@ header #menu a:hover {
   transition: all .3s ease-in-out;
 }
 
+header #menu .back-left {
+  width: 100%;
+  max-width: 50%;
+  height: 100vh;
+  left: 0;
+  background-color: #132e30;
+  z-index: 9999;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  border-right: 1px solid black;
+}
+
+header #menu .back-left .logo-left {
+  cursor: pointer;
+  position: absolute;
+  top: 38%;
+  left: 37%;
+  padding: 30px;
+  border: 1px solid rgba(253, 253, 253, 0.13);
+  border-radius: 50%;
+}
+
+header #menu .back-left .logo-left:hover {
+  border: 1px solid white;
+}
+
 #main-page {
   visibility: hidden;
+  width: 100%;
+  margin: 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 
 #main-page #slider-box {
-  margin: 0 100px 150px 100px;
+  margin: 100px auto;
   padding-bottom: 150px;
 }
 
@@ -172,10 +218,12 @@ header #menu a:hover {
   width: 100%;
 }
 
-#main-page #slider-box div.figcap #slide-project #slide1, #main-page #slider-box div.figcap #slide-project #slide2, #main-page #slider-box div.figcap #slide-project #slide3, #main-page #slider-box div.figcap #slide-project #slide4, #main-page #slider-box div.figcap #slide-project #slide5 {
+#main-page #slider-box div.figcap #slide-project #slide1, #main-page #slider-box div.figcap #slide-project #slide2, #main-page #slider-box div.figcap #slide-project #slide3, #main-page #slider-box div.figcap #slide-project #slide4 {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 20%;
+  left: 20%;
+  text-align: center;
+  width: 345px;
 }
 
 #main-page #slider-box div.figcap #slide-project #slide2, #main-page #slider-box div.figcap #slide-project #slide3, #main-page #slider-box div.figcap #slide-project #slide4, #main-page #slider-box div.figcap #slide-project #slide5 {
@@ -185,22 +233,32 @@ header #menu a:hover {
 #main-page #slider-box div.figcap #slide-project #next, #main-page #slider-box div.figcap #slide-project #back {
   -webkit-transition: opacity 0.5s ease;
   transition: opacity 0.5s ease;
-  font-size: 2rem;
   position: absolute;
   bottom: 10px;
   padding: 10px;
-  color: #e99c7388;
+  color: #e99c73;
   cursor: pointer;
+  opacity: 0.5;
 }
 
 #main-page #slider-box div.figcap #slide-project #next {
-  position: absolute;
-  right: 0;
+  right: 20px;
+}
+
+#main-page #slider-box div.figcap #slide-project #next:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  opacity: 1;
 }
 
 #main-page #slider-box div.figcap #slide-project #back {
-  position: absolute;
-  left: 0;
+  left: 20px;
+}
+
+#main-page #slider-box div.figcap #slide-project #back:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  opacity: 1;
 }
 
 #main-page #slider-box img.back-slider {
@@ -222,6 +280,7 @@ header #menu a:hover {
   top: 72%;
   left: 15px;
   margin-right: 100px;
+  z-index: 99;
 }
 
 #main-page div.reseaux .reseau-soc {
@@ -249,6 +308,8 @@ header #menu a:hover {
 }
 
 #main-page .background-first {
+  width: 1111;
+  max-width: 90%;
   display: block;
   z-index: -2;
   margin: 200px auto;
@@ -330,6 +391,15 @@ header #menu a:hover {
 #main-page #project figure.my-project .project-img {
   -webkit-box-shadow: 2px 10px 10px rgba(15, 15, 14, 0.774);
           box-shadow: 2px 10px 10px rgba(15, 15, 14, 0.774);
+  opacity: 0.5;
+}
+
+#main-page #project figure.my-project .project-img:hover {
+  opacity: 1;
+  -webkit-transition: -webkit-transform 2s ease;
+  transition: -webkit-transform 2s ease;
+  transition: transform 2s ease;
+  transition: transform 2s ease, -webkit-transform 2s ease;
 }
 
 #main-page #project .submit {
@@ -372,38 +442,362 @@ header #menu a:hover {
   top: 90%;
 }
 
-#main-page .mySwiper {
+#main-page #section {
+  width: 1000px;
+  max-width: 90%;
+  height: 400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  margin: 50px auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #17343685;
 }
 
-#main-page .swiper {
-  width: 500px;
-  height: 320px;
+#main-page #section .contact-lab {
+  font-family: 'MuseoModerno';
+  font-size: 1.2rem;
+  color: white;
+  text-shadow: 2px 2px 3px black;
+  margin-bottom: 20px;
+}
+
+#main-page #section .input-cont {
+  background-color: #7a72725b;
+  width: 350px;
+  height: 22px;
+  margin-top: 12px;
+  margin-bottom: 25px;
+  -webkit-box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.479);
+          box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.479);
+  border: none;
+}
+
+#main-page #section .input-mail {
+  background-color: #7a72725b;
+  width: 350px;
+  margin-top: 20px;
+  -webkit-box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.479);
+          box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.479);
+  border: none;
+}
+
+#main-page #section .btn-submit {
+  background-color: #32493e5b;
+  font-family: 'MuseoModerno';
+  font-size: 1.2rem;
+  cursor: pointer;
+  float: right;
+  color: white;
+  border: none;
+  height: 30px;
+  line-height: 30px;
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.788);
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.788);
+  padding: 0 15px;
+}
+
+#main-page #section .btn-submit:hover {
+  opacity: 0.5;
+}
+
+#main-page #section #contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 100px;
+}
+
+#main-page #section #contact .formulaire-l {
+  margin-right: 50px;
+}
+
+#main-page .cont {
+  font-size: 3rem;
+  padding: 20px;
+  text-align: center;
+  margin: 150px auto;
+  margin-bottom: 50px;
+  font-family: 'MuseoModerno';
+  color: #B48A6C;
+}
+
+#main-page #contact-page {
+  margin-top: 300px;
+  position: relative;
+}
+
+#main-page #contact-page .background-cont {
+  position: absolute;
+  right: 100px;
+  top: 90%;
+  z-index: -1;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+footer img {
+  margin-top: 50px;
+  padding: 20px;
+}
+
+footer .copyright {
+  font-size: 1.1rem;
+  color: white;
+  font-family: 'MuseoModerno';
+  font-weight: 300;
+}
+
+#page-cv {
+  margin: 100px auto;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+#page-cv .cv img {
+  border: 5px solid  white;
+  margin-bottom: 50px;
   margin-top: 100px;
 }
 
-#main-page .swiper-slide {
+#page-cv .cv-lien {
+  display: block;
+  background: transparent;
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  border: 1px solid #B48A6C;
+  border-radius: 30px 30px;
+  font-family: 'MuseoModerno';
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: #B48A6C;
+  cursor: pointer;
+  margin: 20px auto;
+  text-decoration: none;
+}
+
+#page-cv .cv-lien:hover {
+  -webkit-box-shadow: 0 2px 7px 0 #B48A6C;
+          box-shadow: 0 2px 7px 0 #B48A6C;
+}
+
+#page-cv .desc-info {
+  font-family: 'MuseoModerno';
+  color: white;
+  font-weight: 300;
+  letter-spacing: 1px;
+}
+
+#page-cv .gap {
+  margin-top: 150px;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+#page-cv .gap:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  color: #E99C73;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s;
+}
+
+#page-cv .para {
+  width: 700px;
+  max-width: 90%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 50px auto;
+}
+
+#page-cv .moi-meme {
+  max-width: 50%;
+  max-height: 50%;
+  margin: 50px;
+}
+
+.logo-x {
+  position: fixed;
+  top: 20px;
+  left: 30px;
+  z-index: 2;
+}
+
+#container {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  margin: 50px auto;
+}
+
+#container figcaption .tittre-projet {
+  font-size: 1.3rem;
+  font-family: 'MuseoModerno';
+  color: white;
+  margin: 50px;
+  margin-top: 100px;
+}
+
+#container figcaption .desc-projet {
+  font-size: 1rem;
+  font-family: 'MuseoModerno';
+  color: #E99C73;
+  width: 700px;
+  max-width: 90%;
+  text-align: center;
+  margin: 20px auto;
+}
+
+#container figcaption .pro-img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-width: 70%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+}
+
+#container .pro-lien {
+  display: block;
+  background: transparent;
+  width: 200px;
+  height: 50px;
+  line-height: 50px;
+  border: 1px solid #B48A6C;
+  border-radius: 30px 30px;
+  font-family: 'MuseoModerno';
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: #B48A6C;
+  cursor: pointer;
+  margin: 20px auto;
+  text-decoration: none;
+}
+
+#container .pro-lien:hover {
+  -webkit-box-shadow: 0 2px 7px 0 #B48A6C;
+          box-shadow: 0 2px 7px 0 #B48A6C;
+}
+
+#container #pro-paint {
+  width: 1550px;
+  max-width: 95%;
+  position: relative;
+  height: 100vh;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border-radius: 18px;
-  font-size: 22px;
-  font-weight: bold;
-  color: #fff;
+  margin: 0 auto;
+  cursor: pointer;
+  z-index: 0;
+  margin-top: 100px;
+}
+
+#container #pro-paint .paint {
+  position: absolute;
+}
+
+#container #pro-paint .p-l {
+  left: 50px;
+}
+
+#container #pro-paint .p-l:hover {
+  z-index: 2;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all .5s  ease-in;
+  transition: all .5s  ease-in;
+}
+
+#container #pro-paint .p-r {
+  left: 10%;
+  bottom: 100px;
+}
+
+#container #pro-paint .p-r:hover {
+  z-index: 2;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all .5s  ease-in;
+  transition: all .5s  ease-in;
+}
+
+#container #pro-paint .p-l1 {
+  right: 50px;
+  top: 50px;
+  z-index: 0;
+}
+
+#container #pro-paint .p-l1:hover {
+  z-index: 2;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all .5s  ease-in;
+  transition: all .5s  ease-in;
+}
+
+#container #pro-paint .p-r1 {
+  left: 30%;
+  top: 20%;
+  z-index: 1;
+}
+
+#container #pro-paint .p-r1:hover {
+  z-index: 1;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all .5s  ease-in;
+  transition: all .5s  ease-in;
+}
+
+#container #pro-paint .p-r2 {
+  right: 100px;
+  bottom: 10px;
+  z-index: 0;
+}
+
+#container #pro-paint .p-r2:hover {
+  z-index: 2;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: all .5s  ease-in;
+  transition: all .5s  ease-in;
 }
 
 .anim {
@@ -424,5 +818,267 @@ header #menu a:hover {
 
 .vissible {
   display: block !important;
+}
+
+.test {
+  overflow: hidden;
+}
+
+@media screen and (max-width: 1510px) {
+  #main-page #project figure.my-project {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #main-page #project figure.my-project .project-img {
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 1450px) {
+  #main-page #slider-box div.figcap #slide-project #next {
+    right: 8px;
+  }
+  #main-page #slider-box div.figcap #slide-project #back {
+    left: 40px;
+  }
+  #main-page #project figure.my-project .project-img {
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 1380px) {
+  #main-page #slider-box div.figcap #slide-project {
+    padding-right: 300px;
+  }
+  #main-page #slider-box div.figcap #slide-project #next {
+    right: -10px;
+  }
+  #main-page #slider-box div.figcap #slide-project #back {
+    left: 50px;
+  }
+  #container #pro-paint .paint {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 70%;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  #main-page .background-first {
+    max-width: 85%;
+    margin: 150px auto;
+    margin-left: 150px;
+  }
+  #main-page #project figure.my-project {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: 100px;
+  }
+  #main-page #project figure.my-project .project-img {
+    width: 550px;
+    max-width: 80%;
+  }
+  #container #pro-paint .paint {
+    max-width: 50%;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  #main-page #slider-box div.figcap #slide-project #next, #main-page #slider-box div.figcap #slide-project #back {
+    bottom: 10%;
+  }
+}
+
+@media screen and (max-width: 1110px) {
+  #main-page .background-first {
+    margin-left: 120px;
+  }
+  #main-page #slider-box div.figcap #slide-project #slide1, #main-page #slider-box div.figcap #slide-project #slide2, #main-page #slider-box div.figcap #slide-project #slide3, #main-page #slider-box div.figcap #slide-project #slide4 {
+    left: 15%;
+  }
+  #main-page #slider-box div.figcap #slide-project #next, #main-page #slider-box div.figcap #slide-project #back {
+    bottom: 15%;
+  }
+}
+
+@media screen and (max-width: 1058px) {
+  #main-page #slider-box div.figcap #slide-project #next, #main-page #slider-box div.figcap #slide-project #back {
+    bottom: 20%;
+  }
+  #container #pro-paint .paint {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 40%;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  #main-page #slider-box div.figcap #slide-project #next, #main-page #slider-box div.figcap #slide-project #back {
+    bottom: 23%;
+  }
+  #main-page #slider-box div.figcap #slide-project #back {
+    left: 60px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  #main-page #slider-box {
+    margin: 100px auto;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #main-page #slider-box div.figcap {
+    margin: 100px auto;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #main-page #slider-box div.figcap p.desc {
+    margin-left: 50px;
+    text-align: center;
+  }
+  #main-page #slider-box div.figcap #slide-project {
+    left: 20%;
+  }
+  #main-page #slider-box div.figcap #slide-project #back, #main-page #slider-box div.figcap #slide-project #next {
+    display: none;
+  }
+  #main-page #slider-box img.back-slider {
+    display: none;
+  }
+  #main-page #contact-page .background-cont {
+    display: none;
+  }
+  #main-page #project figure.my-project {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  #main-page #project figure.my-project .project-img {
+    width: 550px;
+    max-width: 80%;
+  }
+  #main-page #project .back-project {
+    display: none;
+  }
+  #main-page .background-first {
+    max-width: 70%;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  #container #pro-paint {
+    height: 500px;
+    max-height: 80%;
+  }
+  #container #pro-paint .p-r {
+    top: 50%;
+  }
+  #container #pro-paint .p-r2 {
+    top: 45%;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  #container #pro-paint .p-r {
+    top: 40%;
+  }
+  #container #pro-paint .p-r2 {
+    top: 35%;
+  }
+  #page-cv .cv img {
+    max-width: 80%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #container figcaption .tittre-projet {
+    font-size: 1rem;
+  }
+  #container #pro-paint .p-r {
+    top: 30%;
+  }
+  #container #pro-paint .p-r2 {
+    top: 22%;
+    right: 15%;
+  }
+  #page-cv {
+    margin-bottom: 50px;
+  }
+  #page-cv .cv img {
+    max-width: 70%;
+  }
+  #page-cv .gap {
+    margin-bottom: 20px;
+    margin-top: 40px;
+  }
+  #page-cv .desc-info {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #container .pro-lien {
+    font-size: 0.8rem;
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+  }
+  #container #pro-paint .p-l {
+    top: 11%;
+    left: 10%;
+  }
+  #container #pro-paint .p-l1 {
+    top: 13%;
+    left: 40%;
+  }
+  #container #pro-paint .p-r {
+    left: 15%;
+  }
+  #container #pro-paint .p-r2 {
+    left: 50%;
+  }
+  #page-cv .para {
+    font-size: 0.9rem;
+  }
+  #page-cv .cv-lien {
+    font-size: 0.8rem;
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
