--- a/style/style.scss
+++ b/style/style.scss
@@ -441,6 +441,9 @@ footer{
         color: white;
         font-weight: 300;
         letter-spacing: 1px;
+        strong{
+            font-size: 1.5rem;
+        }
     }
     .gap{
         margin-top: 150px;
